<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baking_app_background"
    android:orientation="vertical"
    tools:context="com.example.android.bakingapp.StepsDetailActivity">

    <FrameLayout
        android:id="@+id/steps_containerr_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button_id"
            android:layout_width="@dimen/previous_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/baking_app_background"
            android:text="@string/previous"
            android:visibility="invisible" />

        <Button
            android:id="@+id/next_button_id"
            android:layout_width="@dimen/next_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/baking_app_background"
            android:text="@string/next" />
    </LinearLayout>

</RelativeLayout>