<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/step_detailed_description_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baking_app_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/thumnail_id"
        android:layout_margin="@dimen/image_view_margin"
        android:layout_width="@dimen/image_view_width"
        android:layout_height="@dimen/image_view_height"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exoplayer_height"
        android:visibility="gone" />

    <TextView
        android:id="@+id/step_detailed_description_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/step_desription_text_top_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>