<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baking_app_background"
    tools:context="com.example.android.bakingapp.MainActivity">

    <LinearLayout
        android:id="@+id/recipe_list_linear_layout_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/please_select_a_recipe_from_the_below"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_names_recycler_view_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/error_message_display"
        style="@style/ErrorTextViewStyles"
        android:text="@string/error_message" />

    <ProgressBar
        android:id="@+id/progress_bar_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
</FrameLayout>
